--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   background-image: URL("noisy-texture-100x100-o23-d62-c-0d0709-t0.png");
   background-repeat: repeat;
   background-color: black;
-  font-family: monospace;
+  font-family: Courier;
 }
 
 
