--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   text-align: center;
   color: white;
-  background-image: URL("noisy-texture-100x100-o23-d62-c-0d0709-t0.png");
+  background-image: URL("./Images/noisy-texture-100x100-o23-d62-c-0d0709-t0.png");
   background-repeat: repeat;
   background-color: black;
   font-family: Courier;
